# qt5ct

./: .gitignore  AUTHORS  COPYING  ChangeLog  README  qt5ct.pri  qt5ct.pro  test.sh
.tx/: config
src/qt5ct/: CMakeLists.txt  appearancepage.cpp  appearancepage.h  appearancepage.ui  fontconfigdialog.cpp  fontconfigdialog.h  fontspage.cpp  fontspage.h  iconthemepage.cpp  iconthemepage.h  interfacepage.cpp  interfacepage.h  main.cpp  mainwindow.cpp  mainwindow.h  paletteeditdialog.cpp  paletteeditdialog.h  qsseditordialog.cpp  qsseditordialog.h  qsspage.cpp  qsspage.h  qt5ct.pro  tabpage.cpp  tabpage.h  troubleshootingpage.cpp  troubleshootingpage.h  troubleshootingpage.ui
src/qt5ct-common/: CMakeLists.txt  qt5ct-common.pro  qt5ct.cpp  qt5ct.h
src/qt5ct-qtplugin/: main.cpp  qt5ct-qtplugin.pro  qt5ct.json  qt5ctplatformtheme.cpp  qt5ctplatformtheme.h
src/qt5ct-style/: CMakeLists.txt  plugin.cpp  qt5ct-style.pro  qt5ctproxystyle.cpp  qt5ctproxystyle.h
src/qt5ct-style/qt5ct-style_autogen/: mocs_compilation.cpp
src/qt5ct-style/qt5ct-style_autogen/EWIEGA46WW/: moc_qt5ctproxystyle.cpp
src/qt5ct-style/qt5ct-style_autogen/include/: plugin.moc
src/qt5ct/desktop-translations/: qt5ct_ar.desktop.in  qt5ct_bg.desktop.in  qt5ct_ca.desktop.in  qt5ct_cs.desktop.in  qt5ct_da.desktop.in  qt5ct_de.desktop.in  qt5ct_el.desktop.in  qt5ct_es.desktop.in  qt5ct_es_ES.desktop.in  qt5ct_fi.desktop.in  qt5ct_fr.desktop.in  qt5ct_he.desktop.in  qt5ct_hu.desktop.in  qt5ct_it_IT.desktop.in  qt5ct_ja.desktop.in  qt5ct_nl_NL.desktop.in  qt5ct_pl.desktop.in  qt5ct_pt_BR.desktop.in  qt5ct_ru.desktop.in  qt5ct_sk.desktop.in  qt5ct_sr.desktop.in  qt5ct_tr.desktop.in  qt5ct_uk.desktop.in  qt5ct_zh_CN.desktop.in  qt5ct_zh_TW.desktop.in
src/qt5ct/translations/: qt5ct_ar.ts  qt5ct_bg.ts  qt5ct_ca.ts  qt5ct_cs.ts  qt5ct_da.ts  qt5ct_de.ts  qt5ct_el.ts  qt5ct_en.ts  qt5ct_es.ts  qt5ct_es_ES.ts  qt5ct_fi.ts  qt5ct_fr.ts  qt5ct_gl_ES.ts  qt5ct_he.ts  qt5ct_hu.ts  qt5ct_it.ts  qt5ct_it_IT.ts  qt5ct_ja.ts  qt5ct_kk.ts  qt5ct_lt.ts  qt5ct_nl.ts  qt5ct_nl_NL.ts  qt5ct_pl.ts  qt5ct_pt.ts  qt5ct_pt_BR.ts  qt5ct_ru.ts  qt5ct_sk.ts  qt5ct_sr.ts  qt5ct_sr_BA.ts  qt5ct_sr_RS.ts  qt5ct_tr.ts  qt5ct_uk.ts  qt5ct_zh_CN.ts  qt5ct_zh_TW.ts  translations.qrc
utils/: update_tx.sh
